# cango.logging

./: .gitignore  CMakeLists.txt  README.adoc  README.md
cmake/: Config.cmake.in  InstallInfo.cmake  ModuleInfo.cmake  ProjectUtils.cmake
include/cango/: logging.hpp
include/cango/logging/: combine.hpp  logger.hpp  make_logger.hpp  output_stream.hpp  rolling.hpp  std_impl.hpp  table.hpp  wrap.hpp
include/cango/logging/details/: combined_output_stream.hpp  wrap_ostream.hpp
module/cango.logging.core/: CMakeLists.txt  README.md
module/cango.logging.core/include/cango/logging/: output_stream.hpp  runtime_log.hpp  static_log.hpp  std_impl.hpp
module/cango.logging.rolling/: CMakeLists.txt
module/cango.logging.rolling/include/cango/logging/: rolling.hpp
module/cango.logging.std_log/: CMakeLists.txt
module/cango.logging.std_log/include/cango/logging/: std_runtime_log.hpp  std_static_log.hpp
module/cango.logging.std_log/src/: std_runtime_log.cpp  std_static_log.cpp
module/cango.logging.table/: CMakeLists.txt
module/cango.logging.table/include/cango/logging/: table.hpp
test/: CMakeLists.txt  availability.cpp  test.cpp
